--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 </head>
 
 <body>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&appId=851906188155072&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div class="wrapper">
 
 <div class="introtitle">
@@ -79,7 +89,8 @@
 <div class="loginbuttonbar">
 	<div class="text-center">
         <div class='signupbutton'>
-        	<p>Sing Up</p>
+        	<div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false">
+            </div>
             <a href="signup.html"></a>
        	</div>
     	<div class='loginbutton'>
