--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
 <div class="loginbuttonbar">
 	<div class="text-center">
         <div class='signupbutton'>
-        	<div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false">
-            </div>
+        	<p>Sign Up</p>
             <a href="signup.html"></a>
        	</div>
     	<div class='loginbutton'>
     		<p>Log In</p>
             <a href="yourgarden.html"></a>
         </div>
+                	<div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false">
+            </div>
     </div>
 </div>
 
