Google Plus Development 03

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <span
     class="g-signin"
     data-callback="signinCallback"
-    data-clientid="406577624934-lffvum8qghomp8b0d38ihv2u4igtfrdo.apps.googleusercontent.com"
+    data-clientid="406577624934"
     data-cookiepolicy="single_host_origin"
     data-requestvisibleactions="http://schema.org/AddAction"
     data-scope="https://www.googleapis.com/auth/plus.login">
