--- a/yourgarden.html
+++ b/yourgarden.html
@@ -16,9 +16,14 @@
 <body>
 <div class="wrapper">
 
-<div class="youtubeIframeAPI">
-<div id="player"></div>
+
+<div class="player">
+<iframe id="ytplayer"  type="text/html" width="100%" height="100%"
+src="https://www.youtube.com/embed/oXWMt4vkQ80?autoplay=1&controls=0&rel=0&showinfo=0"
+frameborder="0" allowfullscreen>
+</iframe>
 </div>
+
 
 
 <div class="footerprofile">
